# OSA

./: .gitignore  .pep8speaks.yml  404.html  Dockerfile  FAQ.md  LICENSE  README.md  action.yml  dotenv-example  evaluate_docstrings.py  get_structure.py  index.html  main.py  mkdocs.yml  objects.inv  pyproject.toml  repo_tree.txt  repoagent_docstring_scores.csv  requirements-paper-claims-eval.txt  requirements.txt  setup.py  struct_to_json.py  test.py  test_readmechecker.py  tmp_requirements.txt
.github/: CONTRIBUTING.md  PULL_REQUEST_TEMPLATE.md  SECURITY.md
.github/ISSUE_TEMPLATE/: BUG_ISSUE.md  FEATURE_ISSUE.md
.github/workflows/: black.yml  ci.yml  release.yml  unit_tests.yml
OSA/: readmegenerator.py  utils.py
OSA/analytics/: metadata.py
OSA/examples/: README.md
OSA/github_agent/: github_agent.py
OSA/osatreesitter/: docgen.py  llama.py  models.py  osa_treesitter.py  requirements.txt
OSA/readmeai/: readme_core.py
OSA/translation/: dir_translator.py
README benchmark/: README benchmark.ipynb  repos_upd.csv
README benchmark/src/: deepeval_checker.py  file_handler.py  github_agent.py  notebook_utils.py  readme_generator.py  settings.py
albumentations/: docs_experiment.json
ase_paper/: dataset_docstrings.txt  dataset_readme.txt  docstring_scores.csv  metrics.py  readme_prompts.txt  repoagent_metrics.py  transform_json_repoagent.py
code2flow/: docs_experiment.json
code2flow_repoagent/: docs_experiment.json
docker/: Dockerfile
docs/: README.md  index.md  reference.md
docs/faq/: configuration-api-keys.md  contributing-community.md  general-questions.md  index.md  installation-setup.md  technical-details.md  troubleshooting.md  usage-features.md
docs/paper-claims/: index.md
docs/scheduler/: index.md
docs/workflow-generator/: index.md
examples/: run_examples.md
examples/BAMT/: README.md
examples/Chromakey/: README.md
examples/FEDOT/: README.md
examples/nas-fedot/: README.md
experiments/: description.md
faq/: index.html
faq/configuration-api-keys/: index.html
faq/contributing-community/: index.html
faq/general-questions/: index.html
faq/installation-setup/: index.html
faq/technical-details/: index.html
faq/troubleshooting/: index.html
faq/usage-features/: index.html
flask/: docs_experiment.json
flask_repoagent/: docs_experiment.json
greenlet/: docs_experiment.json
mvp/: download_vkr.py
mvp/03_annotation/: paper_10_claims.json  paper_1_claims.json  paper_2_claims.json  paper_3_claims.json  paper_4_claims.json  paper_6_claims.json  paper_7_claims.json  paper_8_claims.json  paper_9_claims.json
mvp/04_pipeline/: 00_run_marker_on_pdf.py  01_parse_pdf_with_marker.py  02_claim_extraction_mvp.py  03_evaluate_claims.py  04_aggregate_claim_evaluation.py  05_run_multi_doc_pipeline.py  06_rerun_empty_claims.py
osa_docs/: index.md
osa_docs/osa_tool/: index.md  run.md  run_chat.md  run_multi_process.md
osa_docs/tests/: data_factory.md
osa_tool/: arguments_parser.py  logger.py  main.py  run.py  run_chat.py  run_multi_process.py  scheduler.py  utils.py
osa_tool/aboutgen/: about_generator.py  prompts_about_config.py
osa_tool/analytics/: metadata.py  prompt_builder.py  report_generator.py  report_maker.py  response_validation.py  run_report_gen.py  sourcerank.py
osa_tool/config/: osa_config.py  settings.py
osa_tool/conversion/: notebook_converter.py
osa_tool/convertion/: notebook_converter.py
osa_tool/doc_validator/: doc_validator.py
osa_tool/docs_generator/: community.py  contributing.py  docs_run.py  license.py
osa_tool/git_agent/: git_agent.py
osa_tool/github_agent/: github_agent.py
osa_tool/github_workflow/: README.md  generator.py  test_generator.py  workflow_manager.py
osa_tool/models/: models.py
osa_tool/operations/: operations_catalog.py  registry.py
osa_tool/organization/: organize.py  repo_organizer.py
osa_tool/osa_agent/: agent.py  base.py  builder.py  config.py  context.py  graph.py  models.py  osa_agent_func.py  state.py
osa_tool/osatreesitter/: docgen.py  models.py  osa_treesitter.py  topology.py
osatreesitter/: docgen.py  main.py  osa_treesitter.py  readme.md  requirements.txt
python-fire/: README.md
readmegen/: README.md  main.py  pyproject.toml  requirements.txt  setup.py
research/: README.md
scheduler/: index.html
search/: search_index.json
simdjson_repoagent/: docs_experiment.json
tests/: conftest.py  data_factory.py  evaluate_readme.py  integratiorun_benchmark.py
unoconv/: docs_experiment.json
workflow-generator/: index.html
(+1143 files in other folders)
