[tool.poetry]
name = "Open Source Advisor"
version = "0.1.0"
description = "Tool that just makes your open source project better!"
authors = ["ITMO-NSS-team https://github.com/ITMO-NSS-team/"]
package-mode = false

[tool.poetry.dependencies]
python = "^3.10"
aiohappyeyeballs = "2.4.4"
aiohttp = "3.11.11"
aiosignal = "1.3.2"
annotated-types = "0.7.0"
anyio = "4.7.0"
aspose-pdf = "25.1.0"
async-timeout = "5.0.1"
attrs = "25.1.0"
certifi = "2024.12.14"
charset-normalizer = "3.4.1"
colorama = "0.4.6"
distro = "1.9.0"
exceptiongroup = "1.2.2"
frozenlist = "1.5.0"
gitdb = "4.0.11"
gitpython = "3.1.43"
h11 = "0.14.0"
httpcore = "1.0.7"
httpx = "0.28.1"
idna = "3.10"
iniconfig = "2.0.0"
jiter = "0.8.2"
markdown-it-py = "3.0.0"
mdurl = "0.1.2"
multidict = "6.1.0"
openai = "1.58.1"
packaging = "24.2"
pdfminer.six = "20231228"
pluggy = "1.5.0"
propcache = "0.2.1"
pydantic = "2.10.5"
pydantic-extra-types = "2.9.0"
pydantic_core = "2.27.2"
Pygments = "2.19.1"
pytest = "8.3.4"
pytest-mock = "3.14.0"
python-dotenv = "1.0.1"
PyYAML = "6.0.2"
regex = "2024.11.6"
requests = "2.32.3"
rich = "13.9.4"
smmap = "5.0.2"
sniffio = "1.3.1"
structlog = "24.4.0"
tiktoken = "0.8.0"
tomli = "2.2.1"
tqdm = "4.67.1"
tree-sitter = "0.23.2"
tree-sitter-python = "0.23.4"
typing_extensions = "4.12.2"
urllib3 = "2.3.0"
yarl = "1.18.3"
readmeai = {git = "https://github.com/fl1pcoin/readmeai.git", rev = "512eef84ffd3e8b840957d2a3d57bc2343e9a639"}

[tool.poetry.group.dev.dependencies]
pytest = "8.3.4"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
