[project]
name = "osa_tool"
version = "0.2.2"
description = "Tool that just makes your open source project better!"
requires-python = ">=3.10,<4.0"
authors = [
    { name = "ITMO-NSS-team", email = "itmo.nss.team@gmail.com" }
]
readme = "README.md"
license = "BSD-3-Clause"
packages = [{ include = "osa_tool" }]
dynamic = ["dependencies"]

[project.urls]
Homepage = "https://github.com/aimclub/OSA"
Documentation = "https://itmo-nss-team.github.io/Open-Source-Advisor/"
Issues = "https://github.com/aimclub/OSA/issues"

[tool.poetry.dependencies]
aiofiles = ">=24.1.0"
black = ">=25.0.0"
colorama = ">=0.4.6"
GitPython = ">=3.1.40"
mkdocs = ">=1.6.0"
mkdocs-material = ">=9.6.0"
mkdocstrings = { extras = ["python"], version = ">=0.29.0" }
mkdocstrings-python = ">=1.16.0"
nbconvert = ">=6.0"
nbformat = ">=5.0"
protollm = ">=0.1.5"
prompt_toolkit = ">=3.0.50"
qrcode = ">=7.4.0"
reportlab = ">=4.2.0,<5.0.0"
structlog = ">=24.4.0"
tree-sitter = ">=0.23.0"
tree-sitter-python = ">=0.23.0"
pipreqs = { version = ">=0.5.0", python = "<3.13" }

[tool.poetry.group.dev.dependencies]
pytest = ">=8.3.0"
pytest-asyncio = ">=1.0.0"
pytest-mock = ">=3.12.0"

[project.scripts]
osa-tool = "osa_tool.run:main"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.black]
line-length = 120
